general_bases_cloud/aws-bulk loading-and-transaction-events/infrastructure/vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Description: |
  Stack hijo que contiene la configuracion de red

Parameters:
  Environment:
    Type: String
  ParentStackName:
    Type: String


Resources:
  vpcRds:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.23.0.0/16'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-vpc
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  subnetVpcRdsOne:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcRds
      AvailabilityZone: us-west-2a
      CidrBlock: '10.23.1.0/24'
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-subnet-1
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  subnetVpcRdsTwo:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcRds
      AvailabilityZone: us-west-2b
      CidrBlock: '10.23.2.0/24'
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-subnet-2
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  subnetVpcRdsThree:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcRds
      AvailabilityZone: us-west-2c
      CidrBlock: '10.23.3.0/24'
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-subnet-3
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  routeTableVpcRds:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcRds
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-route-table
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  subnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetVpcRdsOne
      RouteTableId: !Ref routeTableVpcRds
  subnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetVpcRdsTwo
      RouteTableId: !Ref routeTableVpcRds
  subnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref subnetVpcRdsThree
      RouteTableId: !Ref routeTableVpcRds
  instanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup para bases de datos MySql RDS
      VpcId: !Ref vpcRds
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
          Description: Permite el acceso desde cualquier IP
        - IpProtocol: tcp
          FromPort: 1433
          ToPort: 1433
          CidrIp: 0.0.0.0/0
          Description: Permite el acceso desde cualquier IP                    
  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ParentStackName}-igw
        - Key: stack
          Value: ${ParentStackName}
        - Key: environment
          Value: !Ref Environment
  attachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpcRds
      InternetGatewayId: !Ref internetGateway
  routeIg:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref routeTableVpcRds
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway

Outputs:
  subnetVpcRdsOne:
      Value: !Ref subnetVpcRdsOne
      Export:
        Name: subnetVpcRdsOne
  subnetVpcRdsTwo:
      Value: !Ref subnetVpcRdsTwo
      Export:
        Name: subnetVpcRdsTwo
  subnetVpcRdsThree:
      Value: !Ref subnetVpcRdsThree
      Export:
        Name: subnetVpcRdsThree
  instanceSecurityGroup:
      Value: !Ref instanceSecurityGroup
      Export:
        Name: instanceSecurityGroup
